# app-mkpkgconfig

./: .hgignore  .hgtags  ChangeLog  Changes  GNUmakefile  Makefile.am  NEWS  README  README.mkdn  configure.ac  mkpkg-config.pl  mkpkgconfig  mstbuild.cfg
lib/App/: mkpkgconfig.pm
lib/App/mkpkgconfig/: PkgConfig.pm
lib/App/mkpkgconfig/PkgConfig/: Entry.pm
m4/: mst_dosubst.m4  mst_pod_gen_docs.m4
script/: mkpkgconfig
snippets/: create_am_macros.mk  doc_man_init.mk  dosubst.mk  hooks.mk  inst_vars.mk  perl_compile.mk  perl_prog.mk  perl_subst.mk  prog_pod_pl_in.mk  substitute_config_variables.mk
src/: Makefile.am  create_reldir.mk  mkpkg-config.pl.in  pod_all.mk  pod_html.mk  pod_man.mk  pod_pdf.mk
